maybe solved overlap issue

--- a/scripts/mapbox/legend.css
+++ b/scripts/mapbox/legend.css
@@ -6,7 +6,7 @@
   position: absolute;
   background-color: rgba(197, 214, 183, 0.671);
   top: 10px;
-  left: 60px;
+  left: 120px;
   padding: 10px 5px 5px 5px;
   shape-margin: 1%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0);
@@ -20,13 +20,13 @@
 }
 
 h7 {
-  margin: 10px;
+  margin: 5px;
   font-size: 0.9em;
   text-align: left;
 }
 
 h6 {
-  margin: 10px;
+  margin: 5px;
   font-size: 0.9em;
   text-align: left;
 }
@@ -38,14 +38,14 @@ h2 {
 }
 
 #info {
-  margin: 10px;
+  margin: 5px;
   font-size: 1em;
   text-align: left;
 
 }
 
 #info din {
-  margin: 10px;
+  margin: 5px;
   font-size: 1em;
   text-align: left;
 
@@ -132,15 +132,15 @@ h2 {
   position: absolute;
   background-color: rgba(202, 214, 183, 0.404);
   top: -125px;
-  left: 105px;
+  left: 120px;
   padding: 10px;
   shape-margin: 1%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   line-height: 16px;
   height: 80px;
   margin-bottom: 20px;
-  width: 350px;
-  height: 120px;
+  width: 550px;
+  height: 110px;
   z-index: 1;
   border-radius: 5px;
   color: rgb(33, 48, 12);
